--- a/bertopic_model/config.json
+++ b/bertopic_model/config.json
@@ -10,7 +10,7 @@
   "nr_topics": null,
   "seed_topic_list": null,
   "top_n_words": 10,
-  "verbose": true,
+  "verbose": false,
   "zeroshot_min_similarity": 0.7,
   "zeroshot_topic_list": null
 }
